--- a/index.html
+++ b/index.html
@@ -1,77 +1,116 @@
 <!DOCTYPE html>
 
-<html>
-    <meta charset="UTF-8">
 <head>
-    <title>Cartão de visitas</title>
+    <meta charset="UTF-8">
+    <title>Cartão de Visitas</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
         .cartao {
-            width: 420px;
-            height: 215px;
-            border: solid, #940000;
-            background: linear-gradient(135deg, #000000, #7a4646);
-            margin: 20px;
-            border-radius: 10px;
-            position: absolute;
-        }
-
-        .foto{
-            width: 150px;
-            height: 150px;
-            border: 40px, rgb(202, 158, 158);
-            position: absolute;
-            top: 15px;
-            left: 125px;
+            width: 400px;
+            height: 250px;
+            background: linear-gradient(135deg, #2f2f30, #b7b5b9);
             border-radius: 15px;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            padding: 20px;
+            color: white;
+            overflow: hidden;
         }
 
+        .foto {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-right: 20px;
+            border: 4px solid #ffffff;
+        }
+
+        .foto img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
         .dados {
-            width: 220px;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .dados b {
+            font-size: 18px;
+            margin-bottom: 10px;
+            color: #ffffff;
+            font-weight: bold;
+        }
+
+        .dados p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+
+        .dados p strong {
+            font-weight: bold;
+        }
+
+        .redes-sociais {
             position: absolute;
-            top: -329px;
-            left: 150px;
-            font-family: Arial, Helvetica, sans-serif;
-            color: rgb(255, 255, 255);
-            text-align: right;
+            bottom: 10px;
+            right: 10px;
+            display: flex;
+            gap: 10px;
         }
 
-        .github {
-            position: relative;
-            top: -23;
-            left: -45px;
+        .insta {
+            width: 50px;
+            height: 50px;
         }
 
-        .Twitter {
-            position: relative;
-            top: -37px;
-            left: 50px;
+        .git {
+            width: 80px;
+            height: 50px;
         }
     </style>
 </head>
 
 <body>
+
     <div class="cartao">
         <div class="foto">
-            <img src="img/web.jpg" class="foto" alt="foto de perfil">
+            <img src="img/web.jpg" alt="Foto de perfil">
         </div>
-    </div>
+
         <div class="dados">
-        <b>Cartão de Visistas</b>
-        <p>Leandro de Sousa Brasil</p>
-        <p>Mecânico industrial </p>
-        <p>(85) 99133-0051</p>
-        <p>leandro.brasil09@aluno.ifce.edu.br</p>
+            <b>Cartão de Visitas</b>
+            <p><strong>Leandro de Sousa Brasil</strong></p>
+            <p>Mecânico Industrial</p>
+            <p><strong>Telefone:</strong> (85) 99133-0051</p>
+            <p><strong>Email:</strong> leandro.brasil09@aluno.ifce.edu.br</p>
         </div>
-        <figure>
-            <a class="twitter" href="https://x.com/Dr28654810">
-                <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white">
+
+        <div class="redes-sociais">
+            <a href="https://www.instagram.com/___leandro.sx/" target="_blank">
+                <img src="img/insta.png" class="insta" alt="instagram">
             </a>
-            <a class="github" href="https://github.com/dresilva21">
-                <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white">
+            <a href="https://github.com/leandrobrasil2006" target="_blank">
+                <img src="img/GitHub-Logo.png" class="git" alt="GitHub">
             </a>
-        </figure>
+        </div>
     </div>
-    </div>
+
 </body>
+
 </html>
